fix service name

--- a/ansible_deploy.yml
+++ b/ansible_deploy.yml
@@ -45,6 +45,6 @@
 
     - name: restart service
       service:
-        name: gpio18
+        name: player
         state: restarted
         enabled: true
